Document REST and gRPC usage
